cmake_minimum_required(VERSION 3.22.1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# /home/trec/WorkRaj/Coding_Tutorials/

project(08_ArrayADT)
add_executable(08_ArrayADT 08_ArrayADT.c)

project(10_insertion)
add_executable(10_insertion 10_insertion.c)

project(11_deletion)
add_executable(11_deletion 11_deletion.c)

project(12_LinearBinarySearch)
add_executable(12_LinearBinarySearch 12_LinearBinarySearch.c)


project(14_LinkedListTraversal)
add_executable(14_LinkedListTraversal 14_LinkedListTraversal.c)

project(16_LinkedListInsertion)
add_executable(16_LinkedListInsertion 16_LinkedListInsertion.c)

project(18_LinkedListDeletion)
add_executable(18_LinkedListDeletion 18_LinkedListDeletion.c)

project(20_CircularLL)
add_executable(20_CircularLL 20_CircularLL.c)



