cmake_minimum_required(VERSION 3.22.1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# /home/trec/WorkRaj/Coding_Tutorials/

project(08_ArrayADT)
add_executable(08_ArrayADT 08_ArrayADT.c)

project(10_insertion)
add_executable(10_insertion 10_insertion.c)

project(11_deletion)
add_executable(11_deletion 11_deletion.c)

project(12_LinearBinarySearch)
add_executable(12_LinearBinarySearch 12_LinearBinarySearch.c)


project(14_LinkedListTraversal)
add_executable(14_LinkedListTraversal 14_LinkedListTraversal.c)

project(16_LinkedListInsertion)
add_executable(16_LinkedListInsertion 16_LinkedListInsertion.c)

project(18_LinkedListDeletion)
add_executable(18_LinkedListDeletion 18_LinkedListDeletion.c)

project(20_CircularLL)
add_executable(20_CircularLL 20_CircularLL.c)

project(21_DoublyLL)
add_executable(21_DoublyLL 21_DoublyLL.c)

project(24_StackUsingArray)
add_executable(24_StackUsingArray 24_StackUsingArray.c)

project(26_StackOperations)
add_executable(26_StackOperations 26_StackOperations.c)


project(27_StackPeek)
add_executable(27_StackPeek 27_StackPeek.c)

project(28_StackTopBottom)
add_executable(28_StackTopBottom 28_StackTopBottom.c)


project(30_LinkedListStack)
add_executable(30_LinkedListStack 30_LinkedListStack.c)

project(30_LinkedListStack2)
add_executable(30_LinkedListStack2 30_LinkedListStack2.c)

project(31_StackOp2LL)
add_executable(31_StackOp2LL 31_StackOp2LL.c)

project(32_ParenthesisMatch)
add_executable(32_ParenthesisMatch 32_ParenthesisMatch.c)

project(33_MultiParenthesis)
add_executable(33_MultiParenthesis 33_MultiParenthesis.c)

project(37_InfixToPostfix)
add_executable(37_InfixToPostfix 37_InfixToPostfix.c)

project(41_QueueUsingArray)
add_executable(41_QueueUsingArray 41_QueueUsingArray.c)

project(44_CircularQueue)
add_executable(44_CircularQueue 44_CircularQueue.c)

project(46_QueueLinkedList)
add_executable(46_QueueLinkedList 46_QueueLinkedList.c)

project(47_DEQueueArray)
add_executable(47_DEQueueArray 47_DEQueueArray.c)

project(47_DEQueueLinkedList)
add_executable(47_DEQueueLinkedList 47_DEQueueLinkedList.c)

project(51_BubbleSort)
add_executable(51_BubbleSort 51_BubbleSort.c)

project(53_InsertionSort)
add_executable(53_InsertionSort 53_InsertionSort.c)

project(55_SelectionSort)
add_executable(55_SelectionSort 55_SelectionSort.c)

project(56_QuickSort)
add_executable(56_QuickSort 56_QuickSort.c)

project(59_MergeSort)
add_executable(59_MergeSort 59_MergeSort.c)

project(60_CountSort)
add_executable(60_CountSort 60_CountSort.c)

project(65_LinkRepBinTree)
add_executable(65_LinkRepBinTree 65_LinkRepBinTree.c)

project(67_PreOrderTraversal)
add_executable(67_PreOrderTraversal 67_PreOrderTraversal.c)

project(68_PostOrderTraversal)
add_executable(68_PostOrderTraversal 68_PostOrderTraversal.c)

project(69_InOrderTraversal)
add_executable(69_InOrderTraversal 69_InOrderTraversal.c)

project(72_BinarySearchTree)
add_executable(72_BinarySearchTree 72_BinarySearchTree.c)

project(74_SearchRecursive)
add_executable(74_SearchRecursive 74_SearchRecursive.c)

project(75_SearchIterative)
add_executable(75_SearchIterative 75_SearchIterative.c)

project(76_InsertBST)
add_executable(76_InsertBST 76_InsertBST.c)

project(78_DeletionBST)
add_executable(78_DeletionBST 78_DeletionBST.c)